# moreos

./: .flake8  .pylintrc  LICENSE  README.rst  lint-requirements.txt  noxfile.py  setup.cfg  setup.py
.github/workflows/: python-package.yml
doc/source/: conf.py  index.rst  requirements.txt
src/moreos/: __init__.py  _common_types.py  cookie.py  exceptions.py  jar.py  parsing.py  policy.py  storage.py
src/moreos/client_adapters/: __init__.py  interface.py  requests.py
test/unit/: test_parsing_rfc_examples.py  test_storage.py
