[metadata]
name = moreos
description = The cookie library with more security.
long-description = file: README.rst
home-page = https://github.com/sigmavirus24/moreos
author = Ian Stapleton Cordasco
author-email = graffatcolmingov@gmail.com
keywords = cookies cookielib cookiejar jar cookie oreo moreo
license = MIT
license-files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
python-requires = >= 3.6
include-package-data = True
packages = find:
; Presently setuptools needs package-dir defined here and in setup.py
; https://github.com/pypa/setuptools/issues/1136
package-dir =
    = src
install-requires =
    attrs >= 18.1.0

[options.package_data]
rush = py.typed

[options.packages.find]
where = src

; mypy config
[mypy-redis]
ignore_missing_imports = True

[mypy-rfc3986]
ignore_missing_imports = True
